--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -3,49 +3,96 @@
 
 .fv {
   width: 100%;
-  height: calc(100vh - 72px);
+  height: calc(100vh - 100px);
   overflow: hidden;
   position: relative;
-  margin-bottom: 80px;
+  margin-bottom: 100px;
 
   video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    width: 95%;
+    height: 100%;
+    display: block;
+    border-radius: 20px;
     object-fit: cover;
+    margin-inline: auto;
     z-index: -1;
   }
 
-  .title {
-    font-size: 5rem;
-    font-weight: $fw-bold;
+  .titles {
+    font-size: 5.5rem;
+    font-weight: $fw-medium;
 
-    span {
+    .title {
       display: inline-block;
       background-color: $white;
-      padding: 15px;
+      letter-spacing: 0.15rem;
+      padding: 20px 50px;
+
+      .yellow {
+        color: $yellow;
+      }
 
       &:nth-child(1) {
         position: absolute;
-        top: 20px;
+        top: 0px;
         left: 20px;
-        border-radius: 20px 20px 20px 0;
+        border-radius: 0 0 20px 0;
       }
 
       &:nth-child(3) {
         position: absolute;
-        top: 100px;
+        top: 130px;
         left: 20px;
-        border-radius: 0 0 20px 20px;
+        border-radius: 0 0 20px 0;
+      }
+    }
+  }
+
+  .link {
+    position: absolute;
+    right: 30px;
+    bottom: 0;
+    background: $white;
+    border-radius: 20px 0 0 0;
+    padding: 20px 90px 20px 50px;
+
+    .line {
+      font-size: 3rem;
+      color: $white;
+      background: $yellow;
+      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+      border-radius: 50px;
+      transition: .4s ease;
+      padding: 10px 40px;
+      
+      &:hover {
+        transform: translateY(-4px);
+        box-shadow: 2px 4px 15px 2px rgba(0, 0, 0, 0.25);
       }
     }
   }
 }
 
 .purpose {
+  position: relative;
   margin-bottom: 90px;
+
+  .scroll-divider {
+    overflow: hidden;
+    background: $white;
+    position: absolute;
+    top: -150px;
+    z-index: -1;
+
+    .scroll-text {
+      color: $light-grey;
+      font-size: 200px;
+      font-weight: 700;
+      opacity: 0.4;
+      white-space: nowrap;
+      animation: marquee 25s linear infinite;
+    }
+  }
 
   .section-title {
     text-align: center;
@@ -59,11 +106,11 @@
       &::before {
         width: 8px;
         height: 8px;
+        content: "";
         position: absolute;
         top: 50%;
         left: -14px;
         transform: translateY(-50%);
-        content: "";
         background-color: $yellow;
         border-radius: 50%;
       }
@@ -77,6 +124,12 @@
     padding: 0;
 
     li {
+      position: relative;
+      transition: .4s ease;
+
+      &:hover {
+        transform: scale(1.02);
+      }
 
       a {
         display: flex;
@@ -87,15 +140,52 @@
         padding: 10px;
 
         img {
-          width: 50px;
-          height: 50px;
+          width: 15%;
+          object-fit: cover;
           margin-right: 10px;
         }
 
         .box-title {
-          span {
+          width: 85%;
+
+          .en {
             display: block;
             font-size: $fs-small;
+          }
+        }
+
+        .arrow {
+          width: 30px;
+          height: 30px;
+          content: "";
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: 10px;
+          border: 1px solid $black;
+          border-radius: 50%;
+
+          &::after {
+            width: 10px;
+            height: 1px;
+            background-color: $black;
+            content: "";
+            position: absolute;
+            top: 36%;
+            right: 8px;
+            transform: rotate(45deg);
+          }
+
+          &::before {
+            width: 10px;
+            height: 1px;
+            background-color: $black;
+            content: "";
+            position: absolute;
+            right: 8px;
+            bottom: 36%;
+            transform: rotate(-45deg);
+
           }
         }
       }
@@ -104,13 +194,6 @@
 }
 
 .before-after {
-
-  .message {
-    span {
-      color: $yellow;
-    }
-  }
-
   .list {
     display: flex;
     justify-content: space-between;
@@ -120,8 +203,8 @@
       flex: 1;
       background-color: $white;
       box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
-      border-radius: 20px;
-      padding: 10px 20px;
+      border-radius: 5px;
+      padding: 10px 15px;
       margin-right: 20px;
 
       &:last-child {
@@ -131,13 +214,20 @@
       img {
         height: 200px;
         object-fit: cover;
-        border-radius: 20px;
+        border-radius: 5px;
       }
 
       .middle {
-        span {
+        width: 100%;
+        
+        .label {
           display: block;
           font-size: $fs-small;
+        }
+        
+        .text {
+          display: inline-block;
+          border-bottom: 1px solid $yellow;
         }
       }
 
@@ -219,7 +309,7 @@
 #comparison,
 #faq {
   .section-title {
-    margin-bottom: 0
+    margin-bottom: 0;
   }
 
   .section-title,
@@ -247,7 +337,6 @@
       border-radius: 50%;
     }
   }
-
 }
 
 #flow {
@@ -289,16 +378,13 @@
           width: 80px;
           height: 80px;
         }
-
       }
     }
-
   }
 
   .scroll-divider {
     overflow: hidden;
     background: transparent;
-
 
     .scroll-text {
       color: $white;
@@ -332,7 +418,6 @@
     grid-template-columns: repeat(4, minmax(0, 1fr));
     margin-top: 40px;
     gap: 24px;
-
   }
 
   .section-title,
@@ -342,13 +427,10 @@
   .words {
     color: $white;
   }
-
 }
 
 #works {
   padding-block: 100px;
-
-
 
   .flip-slider__inner {
     perspective: 1000px;
@@ -369,7 +451,6 @@
         padding-top: -40px;
       }
     }
-
   }
 
   .slider-inner {
@@ -381,7 +462,7 @@
     cursor: pointer;
 
     &:hover {
-      transform: rotateY(180deg)
+      transform: rotateY(180deg);
     }
 
     .front,
@@ -407,7 +488,6 @@
     display: flex;
     flex-direction: row-reverse;
 
-
     a {
       display: block;
       padding: 5px 20px;
@@ -419,9 +499,7 @@
         color: $white;
       }
     }
-
   }
-
 }
 
 #comparison {
@@ -497,7 +575,6 @@
     }
 
     tbody {
-
       tr:nth-child(even) {
         background-color: $light-grey;
       }
@@ -525,7 +602,6 @@
       td.pronavi {
         border-right: 2px solid $yellow;
         border-left: 2px solid $yellow;
-
       }
 
       tr:last-child {
@@ -533,10 +609,7 @@
           border-bottom: 2px solid $yellow;
         }
       }
-
     }
-
-
   }
 
   .cooling-off {
@@ -547,7 +620,6 @@
 
     .box-inner {
       padding-inline: 15%;
-
 
       .flex {
         display: flex;
@@ -576,7 +648,7 @@
           }
 
           .info {
-            font-size: 3.0rem;
+            font-size: 3rem;
             font-weight: 700;
             margin-bottom: 0;
             letter-spacing: 0.4rem;
@@ -590,7 +662,6 @@
               background-color: $yellow;
               width: 310px;
               height: 2px;
-
             }
 
             span {
@@ -603,7 +674,6 @@
         .icon {
           max-width: 180px;
         }
-
       }
     }
   }
@@ -673,7 +743,7 @@
           .faq-answer {
             font-size: 1.6rem;
             line-height: 1.8;
-            margin-left: 56px; 
+            margin-left: 56px;
           }
         }
       }
