--- a/scss/_voice.scss
+++ b/scss/_voice.scss
@@ -1,2 +1,276 @@
-@use './_mixin' as mx;
-@use './_base';
+@use "./_mixin" as mx;
+@use "./base" as *;
+
+.voice-fv {
+  position: relative;
+  padding-block: 50px;
+  margin-top: 80px;
+
+  .section-title__en {
+    font-size: 150px;
+    font-weight: 900;
+    color: $light-grey;
+    position: absolute;
+    left: -10px;
+    bottom: -20px;
+    z-index: 0;
+  }
+
+  .section-title {
+    display: inline-block;
+    position: relative;
+    color: $black;
+
+    &::before {
+      width: 90%;
+      height: 2px;
+      content: "";
+      position: absolute;
+      left: 5%;
+      bottom: -10px;
+      background-color: $yellow;
+      border-radius: 2px;
+    }
+  }
+}
+
+.voice {
+  margin-top: 100px;
+
+  .list {
+    display: flex;
+    justify-content: space-between;
+
+    li {
+      position: relative;
+      flex: 1;
+      background-color: $white;
+      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      padding: 10px 15px;
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      img {
+        height: 200px;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+
+      .text-1,
+      .text-2 {
+        border-bottom: 1px solid $yellow;
+        padding-bottom: 15px;
+      }
+
+      .small {
+        text-align: center;
+      }
+    }
+  }
+}
+
+.meetup-section {
+  height: calc(100vh * 3);
+  position: relative;
+  color: $white;
+  padding-top: 250px;
+
+  .wrapper {
+    height: 70vh;
+    position: sticky;
+    top: 50%;
+    transform: translateY(-50%);
+    overflow: hidden;
+    background-color: $blue;
+    border-radius: 20px;
+    padding-inline: 100px;
+  }
+
+  .meetups {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    .meetup {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 0.7s ease, transform 0.7s ease;
+      padding: 40px 0;
+
+      &.active {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      .left {
+        width: 40%;
+
+        .section-title {
+          span {
+            position: relative;
+            display: block;
+            font-size: $fs-small;
+            margin-top: 10px;
+            margin-left: 20px;
+
+            &::before {
+              width: 8px;
+              height: 8px;
+              content: "";
+              position: absolute;
+              top: 50%;
+              left: -14px;
+              transform: translateY(-50%);
+              background-color: $yellow;
+              border-radius: 50%;
+            }
+          }
+        }
+      }
+
+      .right {
+        width: 60%;
+        position: relative;
+
+        img {
+          object-fit: cover;
+          box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+        }
+
+        .scroll-meter {
+          width: 2px;
+          height: 200px;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: -30px;
+          background-color: #fff;
+          border-radius: 3px;
+          overflow: hidden;
+
+          .fill {
+            height: 0%;
+            background-color: $yellow;
+            transition: 0.2s ease;
+          }
+        }
+      }
+    }
+  }
+}
+
+.metaleaf {
+    margin-top: -200px;
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+
+    .section-title {
+      span {
+        position: relative;
+        display: block;
+        font-size: $fs-small;
+        margin-top: 10px;
+        margin-left: 20px;
+
+        &::before {
+          width: 8px;
+          height: 8px;
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: -14px;
+          transform: translateY(-50%);
+          background-color: $yellow;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .list {
+      width: 70%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 25px;
+
+      img {
+        border-radius: 5px;
+      }
+
+      .text {
+        font-size: $fw-medium;
+
+        span {
+          display: block;
+          font-size: $fs-small;
+        }
+      }
+    }
+  }
+}
+
+.hackathon {
+  width: 100%;
+  height: 100vh;
+  background-color: $blue;
+  overflow: hidden;
+  padding-block: 100px;
+  margin-bottom: 100px;
+
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+
+    .section-title {
+      span {
+        position: relative;
+        display: block;
+        font-size: $fs-small;
+        margin-top: 10px;
+        margin-left: 20px;
+
+        &::before {
+          width: 8px;
+          height: 8px;
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: -14px;
+          transform: translateY(-50%);
+          background-color: $yellow;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .slider-container {
+      width: 65%;
+      display: flex; /* 横並びにする */
+      gap: 20px;
+
+      .vertical-slider {
+        flex: 1;
+
+        &:nth-child(2) {
+          margin-top: 300px;
+        }
+
+        img {
+          width: 100%;
+          display: block;
+          object-fit: cover;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
