--- a/scss/_voice.scss
+++ b/scss/_voice.scss
@@ -37,9 +37,23 @@
 .voice {
   margin-top: 100px;
 
+  .wrapper {
+    margin-bottom: 0px;
+  }
+
   .list {
     display: flex;
     justify-content: space-between;
+
+    @include mx.tb {
+      width: 70%;
+      flex-direction: column;
+      margin-inline: auto;
+    }
+
+    @include mx.sp {
+      width: 100%;
+    }
 
     li {
       position: relative;
@@ -49,6 +63,11 @@
       border-radius: 5px;
       padding: 10px 15px;
       margin-right: 20px;
+
+      @include mx.tb {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
 
       &:last-child {
         margin-right: 0;
@@ -77,7 +96,11 @@
   height: calc(100vh * 3);
   position: relative;
   color: $white;
-  padding-top: 250px;
+  padding-top: 350px;
+
+  @include mx.tb {
+    padding-top: 350px;
+  }
 
   .wrapper {
     height: 70vh;
@@ -115,7 +138,13 @@
         width: 40%;
 
         .section-title {
-          span {
+          .yellow {
+            display: block;
+            font-size: 3.5rem;
+            // color: $yellow;
+          }
+
+          .small {
             position: relative;
             display: block;
             font-size: $fs-small;
@@ -170,9 +199,18 @@
 
 .metaleaf {
     margin-top: -200px;
+
+    @include mx.tb {
+      margin-top: -300px;
+    }
+
   .wrapper {
     display: flex;
     justify-content: space-between;
+
+    @include mx.tb {
+      flex-direction: column;
+    }
 
     .section-title {
       span {
@@ -202,8 +240,13 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 25px;
 
+      @include mx.tb {
+        width: 100%;
+      }
+
       img {
         border-radius: 5px;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
       }
 
       .text {
@@ -231,6 +274,9 @@
     justify-content: space-between;
 
     .section-title {
+      width: 45%;
+      color: $white;
+
       span {
         position: relative;
         display: block;
@@ -256,6 +302,10 @@
       width: 65%;
       display: flex; /* 横並びにする */
       gap: 20px;
+
+      @include mx.tb {
+        // width: 50%;
+      }
 
       .vertical-slider {
         flex: 1;
